k8s/ingress/aks-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
      - myapp.com
      # The TLS secret must contain keys named tls.crt and tls.key 
      # that contain the certificate and private key to use for TLS.
      secretName: myapp-secret
  rules:
    - host: myapp.com
      http:
        paths:
        - path: /airflow
          pathType: Prefix
          backend:
            service:
              name: airflow-web-service
              port: 
                number: 8080
        - path: /celery
          pathType: Prefix
          backend:
            service:
              name: airflow-web-service
              port:
                number: 5555
